# simfitpp

./: README.md  pyproject.toml
scripts/: download_data.sh
src/simfitpp/: __init__.py  geom_estimators.py  geom_models.py  noise_models.py  scale_estimators.py  simfitpp.py  types.py  utils.py
tests/: test_readme_code.py  test_simfitpp.py  test_simfitpp_multi.py
