[project]
name = "simfitpp"
version = "0.1.0"
description = "Library for estimating the inlier threshold for two-view relative pose estimation using RANSAC."
readme = "README.md"
authors = [
    { name = "Johan Edstedt", email = "johan.edstedt@liu.se" }
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.13.0",
    "opencv-python>=4.11.0.86",
    "poselib>=2.0.4",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "ruff>=0.11.4",
    "tqdm>=4.67.1",
]
